src/objects/Test_User__c.object
<CustomObject>
    <fields>
        <fullName>Case_Study__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Study</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nickname</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Password</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Test User</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Test User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>